# coderd/apidoc/swagger.json
@@ -6208,9 +6208,6 @@
     "codersdk.AuthMethods": {
       "type": "object",
       "properties": {
-        "convert_to_oidc_enabled": {
-          "type": "boolean"
-        },
         "github": {
           "$ref": "#/definitions/codersdk.AuthMethod"
         },
@@ -7089,7 +7086,6 @@
         "moons",
         "workspace_actions",
         "tailnet_ha_coordinator",
-        "convert-to-oidc",
         "single_tailnet",
         "template_restart_requirement",
         "template_insights_page"
@@ -7098,7 +7094,6 @@
         "ExperimentMoons",
         "ExperimentWorkspaceActions",
         "ExperimentTailnetHACoordinator",
-        "ExperimentConvertToOIDC",
         "ExperimentSingleTailnet",
         "ExperimentTemplateRestartRequirement",
         "ExperimentTemplateInsightsPage"
