# site/src/testHelpers/entities.ts
@@ -1113,7 +1113,6 @@ export const MockAuthMethods: TypesGen.AuthMethods = {
   password: { enabled: true },
   github: { enabled: false },
   oidc: { enabled: false, signInText: "", iconUrl: "" },
-  convert_to_oidc_enabled: true,
 }
 
 export const MockAuthMethodsWithPasswordType: TypesGen.AuthMethods = {
